# vakra

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEBUGGING.md  JUPYTER_SETUP.md  Makefile  README.md  Untitled.ipynb  agent_interface.py  agent_interface_sparc.py  benchmark_runner.py  benchmark_runner_one_per_task.py  benchmark_runner_single_docker_image.py  benchmark_setup.py  docker-compose.ports.yml  docker-compose.yml  evaluation.py  generate_checksums.py  m3_setup.py  pyproject.toml  requirements.txt  requirements_ben.txt  requirements_benchmark.txt  run_benchmark_with_retries.py  setup.md  template_env  tool_checksums.json  tools_spec_address_2026-02-14_22-00-28.json  validate_output.py
.github/ISSUE_TEMPLATE/: submission_template.yml
agents/: __init__.py  agent_interface.py  langchain_agent_docker_remote.py  langchain_agent_local.py  llm.py  mcp_tool_wrapper.py  test_endpoint.py  tool_calling_agent.py
agents/components/: result_handle_manager.py  tool_shortlister.py
apis/: ARCHITECTURE.md  README.md  WORKFLOW.md  mcp_logging.py
apis/bpo/: requirements.txt
apis/bpo/api/: candidate_source_error.py  data_loader.py  schemas.py  skills_error.py
apis/bpo/data/: tasks.json  tasks_edge_cases.json  tasks_http_errors.json  tasks_schema_violations.json  tasks_type_mismatch.json  tasks_undocumented.json
apis/bpo/mcp/: server.py  task3_router.py
apis/bpo/mcp/test_server/: README.md  __init__.py  test_mcp_server.py
apis/configs/: generate_task_1_tool_universe_mapping.py  mcp_connection_config.yaml  mcp_init_mapping.json  mcp_tool_universe_id_mapping.yaml
apis/m3/python_tools/: README.md  README_dockerization.md
apis/m3/python_tools/mcp/: README.md  __init__.py  __main__.py  cli.py  config.py  create_llm.py  default_config.json  init_mapping.py  mcp_server.py  server_app.py
apis/m3/python_tools/tools/: pydantic_models.py  pydantic_models_io.py  pydantic_wrapper.py  selection_tools.py  sql_tools.py  tool_registry.py
apis/m3/rest/: .dockerignore  Dockerfile  Dockerfile.mcp  README.md  app.py  docker-compose.yml  mcp_server.py  readme_new.md  requirements.txt  scrape.py  start_all_mcp_servers.sh  test_mcp_filtering.py  update_operation_ids.py
apis/m3/rest/db/: add_mcp_servers_to_claude.sh  domains.json
apis/m3/rest/examples/: langchain_agent_docker_remote.py  langchain_agent_local.py
apis/m3/rest/server/: __init__.py  address.py  airline.py  app_store.py  authors.py  beer_factory.py  bike_share_1.py  book_publishing_company.py  books.py  california_schools.py  car_retails.py  card_games.py  cars.py  chicago_crime.py  citeseer.py  codebase_comments.py  codebase_community.py  coinmarketcap.py  college_completion.py  computer_student.py  cookbook.py  craftbeer.py  cs_semester.py  debit_card_specializing.py  disney.py  donor.py  european_football_1.py  european_football_2.py  financial.py  food_inspection.py  food_inspection_2.py  formula_1.py  genes.py  hockey.py  human_resources.py  ice_hockey_draft.py  image_and_language.py  language_corpus.py  law_episode.py  legislator.py  (+41 more)
apis/retrievers/: .dockerignore  Dockerfile  README.md  docker-compose.yml  domain_description_dict.json  domain_negatives.json  index_all_domains.py  mcp_server.py  requirements.txt  server.py  task5_mcp_server.py  test_mcp.py  test_queries.py
apis/retrievers/queries/: address_queries.json  airline_queries.json  app_store_queries.json
benchmark/: mcp_client.py  mcp_connection_config.yaml  mcp_connection_config_legacy.yaml  processors.py  runner_helpers.py  utils.py  validate_clients.py
docker/: .dockerignore  Dockerfile.unified  entrypoint-unified.sh  mcp_dispatch.py  smoke_test.sh
docs/: mcp_environment_guide_one_per_task.md  mcp_environment_guide_single_unified_image.md
environment/: WORKFLOW.md  __init__.py  mcp_logging.py  tool_checksums.py
environment/bpo/: __init__.py
environment/bpo/api/: __init__.py  candidate_source.py  candidate_source_error.py  data_loader.py  skills.py
environment/bpo/data/: __init__.py  large_response_fixture.json
environment/bpo/mcp/: __init__.py  bpo_router.py  server.py
environment/configs/: generate_task_1_tool_universe_mapping.py
environment/m3/: __init__.py
environment/m3/python_tools/: README.md  requirements.txt
environment/m3/python_tools/mcp/: README.md  __main__.py  cli.py  config.py  default_config.json  mcp_server.py
environment/m3/python_tools/tools/: __init__.py  dtype_utils.py  file_io_wrappers.py  pydantic_models.py  pydantic_wrapper.py  (+4 more)
environment/m3/rest/: README.md  enrichment.py  mcp_server.py  requirements.txt  test_mcp_filtering.py
environment/retrievers/: README.md  capability_4_mcp_server.py  chromadb_retriever.py  domain_description_dict.json  domain_negatives.json  entrypoint.sh  hf_sync.py  mcp_server.py  run.py
evaluator/: judge.py
examples/: README.md  demo.py  demo_single_docker_image.py  download_spec.py  invoke_tool.py  list_tools.py
examples/m3_quickstart/: my_agent.py  run_benchmark.py  server.yaml  simple_docker.py  simple_websocket.py
examples/run_task_2_benchmark/: README.md  run_task2.py  task2_server.yaml
gem-lg-task-2/: thrombosis_prediction.json  toxicology.json  video_games.json
notebooks/: exploration.ipynb
notebooks/.ipynb_checkpoints/: exploration-checkpoint.ipynb
sample_data/: dev.json  dev_input.json  dev_output.json  domains.json  test_input.json  test_output.json  train.json
sample_data/capability_4_multiturn/: output.json
sample_data/rest/: base.json  input.json  output.json
sample_data/sel/: base.json  input.json  output.json
sample_data/slot/: base.json  input.json  output.json
scripts/: run_benchmark_with_retries.py
scripts/human_evaluation/: README.md  task3_eval_ui.py  task4_eval_ui.py
tests/: conftest.py  test_tool_checksums.py  verify_schema_preservation.py
tests/e2e/: test_benchmark_e2e.py
tests/integration/: test_mcp_tool_wrapper.py
tests/unit/: test_initialize_active_data.py
tools_explorer/: app.py
tools_explorer/static/: index.html
ui/: Dockerfile  README.md  app.py  data.py  leaderboard_data.json  requirements.txt  ui.html
(+138 files in other folders)
