[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-benchmark"
version = "1.0"
description = "Tool-Calling Agent Benchmark"
readme = "README.md"
requires-python = ">=3.11"
license = {text = ""}
authors = [
    {name = "NA"}
]

# Core dependencies required for basic tool calling functionality
dependencies = [
    "pandas",
    "numpy",
    "sqlglot",
    "pydantic",
    "jinja2",
    "dotenv",
    "pyyaml",
]

[project.optional-dependencies]
# REST API server dependencies
rest = [
    "fastapi",
    "uvicorn",
]

# RAG
rag = [
    "chromadb", 
    "sentence-transformers"
]

# LLM agent functionality
agents = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=1.0.9",
    "httpx",
    "litellm",
    "langchain-litellm",
    "langchain-ollama",
    "sentence-transformers"
]

# MCP server functionality (includes agents)
mcp = [
    "mcp>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "httpx",
    # WebSocket server dependencies
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    # BPO MCP server dependencies
    "fastmcp>=0.2.0",
    "loguru",
    "pyarrow",
    "rapidfuzz",
]

# Setup / init: download data from HuggingFace + manage containers
init = [
    "huggingface_hub",
]

# Legacy dependencies (historically included but not actively used)
legacy = [
    "ibm-generative-ai",
]

# Phoenix / Arize OTEL tracing (optional — for benchmark_runner.py --phoenix)
phoenix = [
    "arize-phoenix-otel",
    "openinference-instrumentation-langchain",
]

# All optional dependencies combined
all = [
    "enterprise-benchmark[rest]",
    "enterprise-benchmark[agents]",
    "enterprise-benchmark[mcp]",
    "enterprise-benchmark[init]",
    "enterprise-benchmark[legacy]",
    "enterprise-benchmark[phoenix]",
]

# Development dependencies
dev = [
    "black",
    "flake8",
    "gitpython",
    "jupyter",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-pep8",
]

[project.scripts]
slot-filling-mcp = "environment.m3.python_tools.mcp.cli:main"
bpo-mcp = "environment.bpo.mcp.server:start_server"
benchmark-setup = "benchmark_setup:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
"environment.bpo.data" = ["*.parquet", "*.json", "*.csv"]

# Optional: Black configuration
[tool.black]
line-length = 88
target-version = ["py311"]

# Optional: Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Optional: Coverage configuration
[tool.coverage.run]
source = ["environment"]
omit = ["*/tests/*", "*/test_*.py"]

# MCP Server configuration
[tool.mcp.server]
name = "slot-filling-mcp"
description = "MCP Server for slot-filling data manipulation tools"
version = "1.0.0"
command = "slot-filling-mcp"

# Environment variables configuration for MCP server
[tool.mcp.server.env]
SLOT_FILLING_MCP_DATABASE = { description = "Path to SQLite database file", required = true }
SLOT_FILLING_MCP_CACHE_DIR = { description = "Cache directory for IO operations", default = "./mcp_cache" }
SLOT_FILLING_MCP_TABLES = { description = "Comma-separated list of tables to load", required = false }
SLOT_FILLING_MCP_TOOL_UNIVERSE_ID = { description = "Unique ID for this server instance", required = false }
SLOT_FILLING_MCP_SERVER_TYPE = { description = "Server mode: router, slot_filling, or selection", default = "router" }
SLOT_FILLING_MCP_TRANSPORT = { description = "Transport protocol: stdio or websocket", default = "stdio" }
SLOT_FILLING_MCP_HOST = { description = "Host to bind WebSocket server", default = "127.0.0.1" }
SLOT_FILLING_MCP_PORT = { description = "Port for WebSocket server", default = "8000" }
